<resources>
    <string name="app_name">MVR</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Login</string>
    <string name="your_email">Your Email</string>
    <string name="password">Password</string>
    <string name="resend">Resend OTP in <B> 55 Sec </B></string>
    <string name="forgotpasswordqtn">Forgot your password?</string>
    <string name="forgotpassword">Forgot your password</string>
    <string name="dont_have_account" translatable="false"><font color='#939C9B'>Don\'t have an Account?</font><br /> <font color='#000000'> Sign Up</font></string>
    <string name="already_have_account"><font color='#939C9B'>Already have an Account?</font><br /> <font color='#000000'>  Sign In</font></string>
    <string name="note"><font color='#000000'><B>Note:</B></font><br /><font color='#000000'> Within 7 working days your withdrawal amount will be processed.</font></string>
    <string name="sign_up">Register</string>
    <string name="name">Name</string>
    <string name="email_id">Email Id</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="submit">Submit</string>
    <string name="enter_your_email">Enter Your Email Id</string>
    <string name="title_activity_dash_board_screen">DashBoardScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="play_list">Play List</string>
    <string name="product_info">Product Info</string>
    <string name="profile">Profile</string>
    <string name="select_weeks">Select Weeks</string>
    <string name="reviews">Reviews</string>
    <string name="week">Week</string>
    <string name="quotes_left"><![CDATA[&ldquo;]]></string>
    <string name="quotes_right"><![CDATA[&rdquo;]]></string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="select_days">Select Days</string>
    <string name="week_day">Week 17, Day 1</string>
    <string name="select_time">Select Time</string>
    <string name="week_day_time">Weel 17, Day 1, Morning Play List</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_condition"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_ploicy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="you_have_quries">If you have any queries, get in touch with us. We will be happy to help you!</string>
    <string name="follow_us">Follow Us</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="choose_file">Choose File</string>
    <string name="pdate_profile">Update Profile</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="lorem">"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. \n \nWhen an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. \n \nIt was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."</string>

</resources>