<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_height="wrap_content">
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/materialtoolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/red"
                android:theme="@style/ToolbarTheme"
                app:popupTheme="@style/PopupOverlay">
            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:src="@drawable/help" />
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/_20sdp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit_name"
                    style="@style/edit_text_login"
                    android:hint="@string/name"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit_mobile"
                    style="@style/edit_text_login"
                    android:hint="@string/mobile_number"
                    android:maxLength="10"
                    android:inputType="number"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit_email"
                    style="@style/edit_text_login"
                    android:hint="@string/email_id"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionDone"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit_message"
                    style="@style/edit_text_login"
                    android:hint="Write a message"
                    android:inputType="textMultiLine"
                    android:layout_height="100dp"
                    android:lines="5"/>



                <TextView
                    android:id="@+id/btn_update"
                    style="@style/btn_login"
                    android:text="Submit"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="@dimen/_10sdp"/>

            </LinearLayout>
        </LinearLayout>



    </LinearLayout>

</LinearLayout>