<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="@dimen/_10sdp"
        android:background="@color/red"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_pic"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@drawable/profileimg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/_5sdp">

            <TextView
                android:id="@+id/txt_name"
                android:text="Angelina Jacob"
                style="@style/text_support"
                android:layout_marginTop="0dp"
                android:singleLine="true"
                android:textSize="@dimen/_13sdp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txt_emailid"
                android:text="angelina.jb@mail.com"
                style="@style/text_support"
                android:textSize="@dimen/_13sdp"
                android:layout_marginTop="3dp"
                android:singleLine="true"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txt_phone_no"
                android:text="+91 98765 43210"
                style="@style/text_support"
                android:textSize="@dimen/_13sdp"
                android:layout_marginTop="3dp"
                android:singleLine="true"
                android:textColor="@color/white" />

        </LinearLayout>

        <ImageView
            android:id="@+id/img_edit_profile"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/icon_edit_pencil"
            android:background="@drawable/circle_white"
            app:tint="@color/red" />

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rectangle_account_bg_white"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/txt_my_team"
                style="@style/text_support"
                android:layout_width="match_parent"
                android:text="My Team"
                android:paddingHorizontal="@dimen/_16sdp"
                android:paddingVertical="@dimen/_12sdp"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:textColor="@color/black"
                android:drawableLeft="@drawable/myteam"
                android:drawablePadding="@dimen/_12sdp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/profile_divider_color"
                />
            <TextView
                android:id="@+id/txt_about_us"
                style="@style/text_support"
                android:layout_width="match_parent"
                android:text="@string/about_us"
                android:paddingHorizontal="@dimen/_16sdp"
                android:paddingVertical="@dimen/_12sdp"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:textColor="@color/black"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="@dimen/_12sdp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/profile_divider_color"
                />
            <TextView
                android:id="@+id/txt_contact_us"
                style="@style/text_support"
                android:layout_width="match_parent"
                android:text="@string/contact_us"
                android:paddingHorizontal="@dimen/_16sdp"
                android:paddingVertical="@dimen/_12sdp"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:textColor="@color/black"
                android:drawableLeft="@drawable/contactus"
                android:drawablePadding="@dimen/_12sdp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/profile_divider_color"
                />
            <TextView
                android:id="@+id/txt_terms_conditions"
                style="@style/text_support"
                android:layout_width="match_parent"
                android:text="@string/terms_condition"
                android:paddingHorizontal="@dimen/_16sdp"
                android:paddingVertical="@dimen/_12sdp"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:textColor="@color/black"

                android:drawableLeft="@drawable/privacy"
                android:drawablePadding="@dimen/_12sdp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/profile_divider_color"
                />
            <TextView
                android:id="@+id/txt_privacy"
                style="@style/text_support"
                android:layout_width="match_parent"
                android:text="@string/privacy_ploicy"
                android:paddingHorizontal="@dimen/_16sdp"
                android:paddingVertical="@dimen/_12sdp"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:textColor="@color/black"
                android:drawableLeft="@drawable/privacy"
                android:drawablePadding="@dimen/_12sdp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/profile_divider_color"
                />

            <TextView
                android:id="@+id/txt_fax"
                style="@style/text_support"
                android:layout_width="match_parent"
                android:text="FAQ's"
                android:paddingHorizontal="@dimen/_16sdp"
                android:paddingVertical="@dimen/_12sdp"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:textColor="@color/black"
                android:drawableLeft="@drawable/faq"
                android:drawablePadding="@dimen/_12sdp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/profile_divider_color"
                />
            <TextView
                android:id="@+id/txt_help_support"
                style="@style/text_support"
                android:layout_width="match_parent"
                android:text="@string/help_support"
                android:paddingHorizontal="@dimen/_16sdp"
                android:paddingVertical="@dimen/_12sdp"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:textColor="@color/black"
                android:drawableLeft="@drawable/help_icon"
                android:drawablePadding="@dimen/_12sdp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/profile_divider_color"
                />
            <TextView
                android:id="@+id/txt_logout"
                style="@style/text_support"
                android:layout_width="match_parent"
                android:text="@string/logout"
                android:paddingHorizontal="@dimen/_16sdp"
                android:paddingVertical="@dimen/_12sdp"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:textColor="@color/black"
                android:drawableLeft="@drawable/logout"
                android:drawablePadding="@dimen/_12sdp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/profile_divider_color"
                />

        </LinearLayout>
    </ScrollView>


</LinearLayout>